[package]
name = "rustpi_train_sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.1"
dotenv = "0.15.0"
fs = "0.0.5"
lazy_static = "1.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
url = "2.5.3"
